--- a/contact-us.html
+++ b/contact-us.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Mon Mar 29 2021 14:45:25 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6061df4d96b978bc9506c9a9" data-wf-site="6047d3daa589377e718b46ce">
+<html data-wf-page="605127bdea0aa455d76fac0c" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
   <meta charset="utf-8">
-  <title>Help | nametag</title>
+  <title>Contact us | nametag</title>
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     name="description">
-  <meta content="Help | nametag" property="og:title">
+  <meta content="Contact us | nametag" property="og:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="og:description">
-  <meta content="Help | nametag" property="twitter:title">
+  <meta content="Contact us | nametag" property="twitter:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="twitter:description">
@@ -58,22 +58,24 @@
   </script>
 </head>
 
-<body>
-  <div class="w-layout-grid grid-4">
-    <h1 id="w-node-_57cbc75a-5958-f07b-8954-97623b4dead5-9506c9a9" class="logo">
-      <a href="index.html" class="link">nametag</a>
-    </h1>
-    <a id="w-node-_57cbc75a-5958-f07b-8954-97623b4dead8-9506c9a9" href="https://a46db2cfd187.ngrok.io/slack/install"
-      target="_blank" class="button-2 w-button">add to slack</a>
+<body class="body-2">
+  <div>
+    <div class="w-layout-grid grid-4">
+      <h1 id="w-node-_5107e8aa-fa0f-aba5-d4e8-5c7930cc88ae-d76fac0c" class="logo">
+        <a href="index.html" class="link">nametag</a>
+      </h1>
+      <a id="w-node-_5107e8aa-fa0f-aba5-d4e8-5c7930cc88b0-d76fac0c" href="https://a46db2cfd187.ngrok.io/slack/install"
+        target="_blank" class="button-2 w-button">add to slack</a>
+    </div>
   </div>
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/support" method="post"
-      data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label
-        for="name" class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256"
-        name="name" data-name="Name" placeholder="" id="name"><label for="email"
-        class="field-label-2">email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email"
-        data-name="Email" placeholder="" id="email" required=""><label class="field-label-4">message</label><textarea
-        placeholder="what&#x27;s on your mind?" maxlength="5000" id="field" name="field" data-name="Field"
+    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/contact_us" method="post"
+      data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact us</label><label for="name"
+        class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256" name="name"
+        data-name="Name" placeholder="" id="name"><label for="email" class="field-label-2">email</label><input
+        type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder=""
+        id="email" required=""><label class="field-label-4">message</label><textarea
+        placeholder="how many users in your company?" maxlength="5000" id="field" name="field"
         class="textarea w-input"></textarea><input type="submit" value="submit" data-wait="Please wait..."
         class="submit-button w-button"></form>
     <div class="w-form-done">
@@ -84,15 +86,21 @@
     </div>
   </div>
   <div class="section-9"><img src="images/tag-1-1.svg" loading="lazy"
-      id="w-node-_7b3f9fe5-befd-ad81-2fe8-db626a541649-9506c9a9" alt="" class="image-24"><img src="images/tag-2.svg"
+      id="w-node-a5a7be08-dcb2-c27b-1b0e-fff8b185707f-d76fac0c" alt="" class="image-24"><img src="images/tag-2.svg"
       loading="lazy" alt="" class="image-23"></div>
   <div><img src="images/Rectangle-123.png" loading="lazy" alt="" class="image-25"></div>
+  <div class="section-8"></div>
   <div>
     <div class="w-layout-grid grid-6">
-      <div id="w-node-_83458edc-9385-1491-3061-5ca904a0f441-9506c9a9" class="text-block-24">© 2021 nametag</div>
-      <a id="w-node-_83458edc-9385-1491-3061-5ca904a0f443-9506c9a9" href="#" class="button-6 blog w-button">Blog</a>
-      <a id="w-node-_83458edc-9385-1491-3061-5ca904a0f445-9506c9a9" href="#" class="button-6 w-button">Privacy
-        Policy</a>
+      <div id="w-node-d951024b-d610-4d58-108f-0179f0dcbac4-d76fac0c" class="text-block-24">© 2021 nametag</div>
+      <a id="w-node-d951024b-d610-4d58-108f-0179f0dcbac6-d76fac0c"
+        href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
+        target="_blank" class="button-6 blog w-button">Blog</a>
+      <a id="w-node-d951024b-d610-4d58-108f-0179f0dcbac8-d76fac0c"
+        href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank"
+        class="button-6 w-button">Privacy Policy</a>
+      <a id="w-node-d951024b-d610-4d58-108f-0179f0dcbaca-d76fac0c" href="support"
+        class="button-6 blog w-button">Support</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
