--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <a href="#page-top" class="link-2">nametag</a>
       </h1>
       <a id="w-node-_3d224376-bd68-7ed6-b627-54e177ccd5f9-908b46cf" href="http://api.nametag.work/slack/install" target="_blank" class="button-2 w-button">add to slack</a>
-      <a onclick="gtag('event', 'login', {'method': 'Test'});" href="#pricing-page" id="w-node-_2a42e08a-d542-63c6-d0d1-8fddfa9ffa24-908b46cf" class="button-5 w-button">pricing</a>
-      <a onclick="gtag('event', 'login', {'method': 'Test'});" href="#features_section" id="w-node-dae3c8a4-d6aa-d932-4f2b-3501c6fb1fcb-908b46cf" class="button-5 w-button">features</a>
+      <a onclick="gtag('event', 'custom_event_1', {'event_category': 'custom_category', 'event_label': 'custom_label'});" href="#pricing-page" id="w-node-_2a42e08a-d542-63c6-d0d1-8fddfa9ffa24-908b46cf" class="button-5 w-button">pricing</a>
+      <a onclick="gtag('event', 'custom_event_2', {'event_category': 'custom_category', 'event_label': 'custom_label'});" href="#features_section" id="w-node-dae3c8a4-d6aa-d932-4f2b-3501c6fb1fcb-908b46cf" class="button-5 w-button">features</a>
     </div>
   </div>
   <div>
