--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Mar 29 2021 14:45:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 30 2021 21:01:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6061df4d96b978bc9506c9a9" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
@@ -28,7 +28,7 @@
     WebFont.load({
       google: {
         families: ["Droid Serif:400,400italic,700,700italic", "Droid Sans:400,700", "Noto Serif:regular,700",
-          "Karla:regular,600"
+          "Karla:regular,600,700,800"
         ]
       }
     });
@@ -44,28 +44,31 @@
   </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
-  <script type="text/javascript">
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-192864550-1', {
-      'anonymize_ip': false
-    });
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
   </script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
-  <div class="w-layout-grid grid-4">
-    <h1 id="w-node-_57cbc75a-5958-f07b-8954-97623b4dead5-9506c9a9" class="logo">
-      <a href="index.html" class="link">nametag</a>
-    </h1>
-    <a id="w-node-_57cbc75a-5958-f07b-8954-97623b4dead8-9506c9a9" href="https://a46db2cfd187.ngrok.io/slack/install"
-      target="_blank" class="button-2 w-button">add to slack</a>
-  </div>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="form-block w-form">
     <form id="email-form" name="email-form" action="https://api.nametag.work/forms/support" method="post"
       data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label
@@ -89,11 +92,23 @@
   <div><img src="images/Rectangle-123.png" loading="lazy" alt="" class="image-25"></div>
   <div>
     <div class="w-layout-grid grid-6">
-      <div id="w-node-_83458edc-9385-1491-3061-5ca904a0f441-9506c9a9" class="text-block-24">© 2021 nametag</div>
-      <a id="w-node-_83458edc-9385-1491-3061-5ca904a0f443-9506c9a9" href="#" class="button-6 blog w-button">Blog</a>
-      <a id="w-node-_83458edc-9385-1491-3061-5ca904a0f445-9506c9a9" href="#" class="button-6 w-button">Privacy
-        Policy</a>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec7-9506c9a9"
+        href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
+        target="_blank" class="button-6 blog w-button">Blog</a>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec9-9506c9a9"
+        href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank"
+        class="button-6 w-button">Privacy Policy</a>
+      <div id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ecb-9506c9a9" class="text-block-24">© 2021 nametag</div>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ecd-9506c9a9" href="support.html" aria-current="page"
+        class="button-6 blog w-button w--current">Support</a>
     </div>
+  </div>
+  <div class="w-layout-grid grid-4">
+    <h1 id="w-node-ebf4257d-c5db-1715-1ce8-3b7d20ff18d6-9506c9a9" class="logo">
+      <a href="index.html" class="link">nametag</a>
+    </h1>
+    <a id="w-node-ebf4257d-c5db-1715-1ce8-3b7d20ff18d9-9506c9a9" href="https://a46db2cfd187.ngrok.io/slack/install"
+      target="_blank" class="button-2 w-button">add to slack</a>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
