--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
   <div class="section-11">
     <a href="http://api.nametag.work/slack/install" target="_blank" class="link-block-7 w-inline-block"><img
-        src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30"></a>
+        src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30" id="add-to-slack-hero-button"></a>
   </div>
   <div>
     <div class="text-block-31">2 week free trial<br>‍</div>
