--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 30 2021 21:01:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Apr 08 2021 21:22:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6047d3daa58937a0908b46cf" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
@@ -93,10 +93,10 @@
   </div>
   <div class="section-11">
     <a href="http://api.nametag.work/slack/install" target="_blank" class="link-block-7 w-inline-block"><img
-        src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30" id="add-to-slack-hero-button"></a>
+        src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30"></a>
   </div>
   <div>
-    <div class="text-block-31">2 week free trial<br>‍</div>
+    <div class="text-block-31">1 month free trial<br>‍</div>
   </div>
   <div class="section-3"></div>
   <div><img src="images/hero-image-1.svg" loading="lazy" alt="" class="image-16"></div>
@@ -130,15 +130,11 @@
   <div>
     <div id="pricing-page" class="text-block-22"><strong class="bold-text-2">Pricing</strong></div>
   </div>
-  <div class="w-layout-grid grid-9"><img src="images/enterprise-5.svg" loading="lazy"
-      id="w-node-_6954c57b-524d-8029-04a7-b52e750ee589-908b46cf" alt="For pricing for large teams, please contact us."
-      class="image-22">
-    <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">2 week free trial<br>‍
-    </div><img src="images/team-9.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
+  <div class="w-layout-grid grid-9">
+    <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">1 month free trial<br>‍
+    </div><img src="images/team.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
       alt="The team plan costs $20/month and includes up to 10 users, weekly summary of new people messaged, integration with Google Calendar and Meet, and about me templates. Additional users cost $1/month."
       class="image-21">
-    <a id="w-node-c98d34ae-c95d-e7c2-0bcf-8d69debedaa0-908b46cf" href="contact-us.html"
-      class="button-2 white w-button">contact us</a>
     <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-908b46cf" href="http://api.nametag.work/slack/install"
       target="_blank" class="button-2 color w-button">try it free</a>
   </div>
