--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 30 2021 21:01:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Apr 08 2021 21:22:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6061df4d96b978bc9506c9a9" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
@@ -70,7 +70,7 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/support" method="post"
+    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work"
       data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label
         for="name" class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256"
         name="name" data-name="Name" placeholder="" id="name"><label for="email"
