Bring back important fixes

--- a/support.html
+++ b/support.html
@@ -70,7 +70,7 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work"
+    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/support" method="post"
       data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label
         for="name" class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256"
         name="name" data-name="Name" placeholder="" id="name"><label for="email"
