--- a/contact-us.html
+++ b/contact-us.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work"
+    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/contact_us" method="POST"
       data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact us</label><label for="name"
         class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256" name="name"
         data-name="Name" placeholder="" id="name"><label for="email" class="field-label-2">email</label><input
