--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div class="w-layout-grid grid-9">
     <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">1 month free trial<br>‍
     </div><img src="images/team.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
-      alt="The team plan costs $20/month and includes up to 10 users, weekly summary of new people messaged, integration with Google Calendar and Meet, and about me templates. Additional users cost $1/month."
+      alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month."
       class="image-21">
     <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-908b46cf" href="http://api.nametag.work/slack/install"
       target="_blank" class="button-2 color w-button">try it free</a>
