--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Apr 08 2021 21:22:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 09 2021 05:01:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="605127bdea0aa455d76fac0c" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
@@ -65,21 +65,28 @@
 </head>
 
 <body class="body-2">
-  <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div>
-    <div class="w-layout-grid grid-4">
-      <h1 id="w-node-_5107e8aa-fa0f-aba5-d4e8-5c7930cc88ae-d76fac0c" class="logo">
-        <a href="index.html" class="link">nametag</a>
-      </h1>
-      <a id="w-node-_5107e8aa-fa0f-aba5-d4e8-5c7930cc88b0-d76fac0c" href="https://a46db2cfd187.ngrok.io/slack/install"
-        target="_blank" class="button-2 w-button">add to slack</a>
+    <div data-collapse="small" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
+      <div class="container-2 w-container">
+        <a href="index.html" class="w-nav-brand">
+          <div class="text-block-33">nametag</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+          <a href="http://nametag.work#pricing-page" class="nav-link-2 w-nav-link">pricing</a>
+          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to
+            slack</a>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="icon-2 w-icon-nav-menu"></div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" action="https://api.nametag.work/forms/contact_us" method="POST"
+    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work"
       data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact us</label><label for="name"
         class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256" name="name"
         data-name="Name" placeholder="" id="name"><label for="email" class="field-label-2">email</label><input
@@ -101,7 +108,7 @@
   <div><img src="images/Rectangle-123.png" loading="lazy" alt="" class="image-25"></div>
   <div class="section-8"></div>
   <div>
-    <div class="w-layout-grid grid-6">
+    <div class="w-layout-grid grid-6 color">
       <a id="w-node-d951024b-d610-4d58-108f-0179f0dcbac6-d76fac0c"
         href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
         target="_blank" class="button-6 blog w-button">Blog</a>
