--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Apr 08 2021 21:22:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 09 2021 05:01:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6047d3daa58937a0908b46cf" data-wf-site="6047d3daa589377e718b46ce">
 
 <head>
@@ -65,21 +65,24 @@
 </head>
 
 <body class="body">
-  <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div>
-    <div id="page" class="w-layout-grid grid-4">
-      <h1 id="w-node-b7121415-8fa8-7cd8-207a-98691ae428a6-908b46cf" class="logo">
-        <a href="#page-top" class="link-2">nametag</a>
-      </h1>
-      <a id="w-node-_3d224376-bd68-7ed6-b627-54e177ccd5f9-908b46cf" href="http://api.nametag.work/slack/install"
-        target="_blank" class="button-2 w-button">add to slack</a>
-      <a href="#pricing-page" id="w-node-_2a42e08a-d542-63c6-d0d1-8fddfa9ffa24-908b46cf"
-        class="button-5 w-button">pricing</a>
-      <a href="#features_section" id="w-node-dae3c8a4-d6aa-d932-4f2b-3501c6fb1fcb-908b46cf"
-        class="button-5 w-button">features</a>
+    <div data-collapse="small" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
+      <div class="container-2 w-container">
+        <a href="#page-top" class="w-nav-brand">
+          <div class="text-block-33">nametag</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+          <a href="#pricing-page" class="nav-link-2 w-nav-link">pricing</a>
+          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to
+            slack</a>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="icon-2 w-icon-nav-menu"></div>
+        </div>
+      </div>
     </div>
   </div>
   <div>
@@ -127,18 +130,19 @@
         alt="" class="image-28">
     </div>
   </div>
+  <div id="pricing-page"></div>
   <div>
-    <div id="pricing-page" class="text-block-22"><strong class="bold-text-2">Pricing</strong></div>
+    <div class="text-block-22"><strong class="bold-text-2">Pricing</strong></div>
   </div>
   <div class="w-layout-grid grid-9">
     <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">1 month free trial<br>‍
-    </div><img src="images/team.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
+    </div><img src="images/team-1.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
       alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month."
       class="image-21">
     <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-908b46cf" href="http://api.nametag.work/slack/install"
       target="_blank" class="button-2 color w-button">try it free</a>
   </div>
-  <div class="w-layout-grid grid-6">
+  <div class="w-layout-grid grid-6 footer color">
     <div id="w-node-_3d186288-ea2d-2feb-4d57-3435b3e385ff-908b46cf" class="text-block-24">© 2021 nametag</div>
     <a id="w-node-_65846792-aa7d-bab1-4266-726cb029f213-908b46cf"
       href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
