--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 09 2021 05:01:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 09 2021 15:13:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6061e0d75e29624edd715519" data-wf-site="6047d3daa589377e718b46ce">
-
 <head>
   <meta charset="utf-8">
   <title>Not Found</title>
@@ -13,66 +12,29 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/nametagapp.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Droid Serif:400,400italic,700,700italic", "Droid Sans:400,700", "Noto Serif:regular,700",
-          "Karla:regular,600,700,800"
-        ]
-      }
-    });
-  </script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Droid Serif:400,400italic,700,700italic","Droid Sans:400,700","Noto Serif:regular,700","Karla:regular,600,700,800"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">
-    ! function (o, c) {
-      var n = c.documentElement,
-        t = " w-mod-";
-      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
-        t + "touch")
-    }(window, document);
-  </script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
-  </script>
-  <!-- End Google Tag Manager -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-192864550-1', {'anonymize_ip': false});</script>
 </head>
-
 <body>
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
   <div class="utility-page-wrap">
     <div class="utility-page-content w-form">
       <h2 class="heading-4">Oops! something broke</h2>
       <div class="div-block-2">error 404 - page not found<br>‍</div>
-      <div>
+      <div class="section-15">
         <a href="index.html" class="button-2 color w-button">return to nametag</a>
       </div>
-      <div>
+      <div class="section-16">
         <a href="support.html" class="button-2 w-button">contact support</a>
       </div>
-    </div><img src="images/monster-2.svg" alt="">
+    </div><img src="images/monster-2.svg" alt="" class="image-33">
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
-    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-  </script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
-
 </html>
