--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 09 2021 05:01:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 09 2021 15:13:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6047d3daa58937a0908b46cf" data-wf-site="6047d3daa589377e718b46ce">
-
 <head>
   <meta charset="utf-8">
   <title>nametag</title>
-  <meta
-    content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
-    name="description">
+  <meta content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" name="description">
   <meta content="nametag" property="og:title">
-  <meta
-    content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
-    property="og:description">
+  <meta content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" property="og:description">
   <meta content="nametag" property="twitter:title">
-  <meta
-    content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
-    property="twitter:description">
+  <meta content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -24,49 +17,15 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/nametagapp.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Droid Serif:400,400italic,700,700italic", "Droid Sans:400,700", "Noto Serif:regular,700",
-          "Karla:regular,600,700,800"
-        ]
-      }
-    });
-  </script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Droid Serif:400,400italic,700,700italic","Droid Sans:400,700","Noto Serif:regular,700","Karla:regular,600,700,800"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">
-    ! function (o, c) {
-      var n = c.documentElement,
-        t = " w-mod-";
-      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
-        t + "touch")
-    }(window, document);
-  </script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
-  </script>
-  <!-- End Google Tag Manager -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-192864550-1', {'anonymize_ip': false});</script>
 </head>
-
 <body class="body">
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
   <div>
     <div data-collapse="small" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
       <div class="container-2 w-container">
@@ -76,8 +35,7 @@
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
           <a href="#pricing-page" class="nav-link-2 w-nav-link">pricing</a>
-          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to
-            slack</a>
+          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to slack</a>
         </nav>
         <div class="menu-button w-nav-button">
           <div class="icon-2 w-icon-nav-menu"></div>
@@ -87,16 +45,12 @@
   </div>
   <div>
     <div id="page-top" class="w-layout-grid grid-5 grid-10">
-      <h1 id="w-node-_2fc1a8bb-3054-8ddd-625f-5aae7ac63b86-908b46cf" class="heading-2">Quality 1:1 pairings for team
-        bonding</h1>
-      <div id="w-node-_4d25ee61-55fd-87f0-5f7d-cc3cbf9743c1-908b46cf" class="text-block-18">On remote teams, it&#x27;s
-        hard to get to know the person behind the screen. nametag prompts you to learn about teammates from the first
-        message.</div>
+      <h1 id="w-node-_2fc1a8bb-3054-8ddd-625f-5aae7ac63b86-908b46cf" class="heading-2">Quality 1:1 pairings for team bonding</h1>
+      <div id="w-node-_4d25ee61-55fd-87f0-5f7d-cc3cbf9743c1-908b46cf" class="text-block-18">On remote teams, it&#x27;s hard to get to know the person behind the screen. nametag prompts you to learn about teammates from the first message.</div>
     </div>
   </div>
   <div class="section-11">
-    <a href="http://api.nametag.work/slack/install" target="_blank" class="link-block-7 w-inline-block"><img
-        src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30"></a>
+    <a href="http://api.nametag.work/slack/install" target="_blank" class="link-block-7 w-inline-block"><img src="images/Group-12.svg" loading="lazy" alt="add to slack" class="image-30"></a>
   </div>
   <div>
     <div class="text-block-31">1 month free trial<br>‍</div>
@@ -104,30 +58,16 @@
   <div class="section-3"></div>
   <div><img src="images/hero-image-1.svg" loading="lazy" alt="" class="image-16"></div>
   <div class="section-4">
-    <div id="w-node-c91d1644-1bb4-2254-ceb6-0443daa89a22-908b46cf" class="text-block-20">These days, we only see each
-      other like this</div><img src="images/monster-top-with-frame-5.svg" loading="lazy"
-      id="w-node-a99e6360-ce62-ceb9-4789-9efc9356d5e8-908b46cf" alt="" class="image-17">
+    <div id="w-node-c91d1644-1bb4-2254-ceb6-0443daa89a22-908b46cf" class="text-block-20">These days, we only see each other like this</div><img src="images/monster-top-with-frame-5.svg" loading="lazy" id="w-node-a99e6360-ce62-ceb9-4789-9efc9356d5e8-908b46cf" alt="" class="image-17">
   </div>
-  <div class="section-7"><img src="images/monster-legs-4.svg" loading="lazy"
-      id="w-node-_56c25a3b-f545-8272-0bca-2374648de60d-908b46cf" alt="" class="image-18">
-    <div id="w-node-_2ee8f798-a3ed-9174-21ca-d1db7bfe344b-908b46cf" class="text-block-23">when there&#x27;s a lot more
-      under the surface.</div>
+  <div class="section-7"><img src="images/monster-legs-4.svg" loading="lazy" id="w-node-_56c25a3b-f545-8272-0bca-2374648de60d-908b46cf" alt="" class="image-18">
+    <div id="w-node-_2ee8f798-a3ed-9174-21ca-d1db7bfe344b-908b46cf" class="text-block-23">when there&#x27;s a lot more under the surface.</div>
   </div>
   <div>
     <div id="features_section" class="w-layout-grid grid-3 section-2">
-      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e989-908b46cf" class="text-block-28">Pick a channel to start
-        from. Every Friday, opted-in users get a list of people they direct messaged for the first
-        time.<br>‍<br>Schedule a 1:1 chat with 1-click.</div><img src="images/weekly-summary-1.svg" loading="lazy"
-        id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98b-908b46cf" alt="" class="image-26"><img
-        src="images/how-to-work-with-me-2.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98c-908b46cf"
-        alt="" class="image-27">
-      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98d-908b46cf" class="text-block-29">View <strong
-          class="bold-text-6">about me </strong>profiles to learn more about teammates&#x27; background and working
-        style.<br><br>nametag provides free templates.</div>
-      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98f-908b46cf" class="text-block-30"><br>New joiners can get to
-        know their colleagues easily and discover who they want to connect more with.</div><img
-        src="images/directory-view-2.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e991-908b46cf"
-        alt="" class="image-28">
+      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e989-908b46cf" class="text-block-28">Pick a channel to start from. Every Friday, opted-in users get a list of people they direct messaged for the first time.<br>‍<br>Schedule a 1:1 chat with 1-click.</div><img src="images/weekly-summary-1.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98b-908b46cf" alt="" class="image-26"><img src="images/how-to-work-with-me-2.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98c-908b46cf" alt="" class="image-27">
+      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98d-908b46cf" class="text-block-29">View <strong class="bold-text-6">about me </strong>profiles to learn more about teammates&#x27; background and working style.<br><br>nametag provides free templates.</div>
+      <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98f-908b46cf" class="text-block-30"><br>New joiners can get to know their colleagues easily and discover who they want to connect more with.</div><img src="images/directory-view-2.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e991-908b46cf" alt="" class="image-28">
     </div>
   </div>
   <div id="pricing-page"></div>
@@ -135,29 +75,17 @@
     <div class="text-block-22"><strong class="bold-text-2">Pricing</strong></div>
   </div>
   <div class="w-layout-grid grid-9">
-    <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">1 month free trial<br>‍
-    </div><img src="images/team-1.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf"
-      alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month."
-      class="image-21">
-    <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-908b46cf" href="http://api.nametag.work/slack/install"
-      target="_blank" class="button-2 color w-button">try it free</a>
+    <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-908b46cf" class="text-block-31 bottom">1 month free trial<br>‍</div><img src="images/team-1.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-908b46cf" alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month." class="image-21">
+    <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-908b46cf" href="http://api.nametag.work/slack/install" target="_blank" class="button-2 color w-button">try it free</a>
   </div>
   <div class="w-layout-grid grid-6 footer color">
     <div id="w-node-_3d186288-ea2d-2feb-4d57-3435b3e385ff-908b46cf" class="text-block-24">© 2021 nametag</div>
-    <a id="w-node-_65846792-aa7d-bab1-4266-726cb029f213-908b46cf"
-      href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
-      target="_blank" class="button-6 blog w-button">Blog</a>
-    <a id="w-node-e57e425e-6f39-46a7-4454-952f5f258183-908b46cf"
-      href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank"
-      class="button-6 w-button">Privacy Policy</a>
-    <a id="w-node-_6713b452-2bf2-fd7e-8ff5-03d68d2453a2-908b46cf" href="support.html"
-      class="button-6 blog w-button">Support</a>
+    <a id="w-node-_65846792-aa7d-bab1-4266-726cb029f213-908b46cf" href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf" target="_blank" class="button-6 blog w-button">Blog</a>
+    <a id="w-node-e57e425e-6f39-46a7-4454-952f5f258183-908b46cf" href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank" class="button-6 w-button">Privacy Policy</a>
+    <a id="w-node-_6713b452-2bf2-fd7e-8ff5-03d68d2453a2-908b46cf" href="support.html" class="button-6 blog w-button">Support</a>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
-    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-  </script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
-
 </html>
