--- a/confirmation.html
+++ b/confirmation.html
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div>
-  <div>
+  <div class="section-14">
     <div class="w-layout-grid">
       <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-dd0cb280" class="text-block-32">got it, thanks!</div><img
         src="images/monster-6.svg" loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-dd0cb280" alt=""
