--- a/404.html
+++ b/404.html
@@ -60,13 +60,13 @@
     <div class="utility-page-content w-form">
       <h2 class="heading-4">Oops! something broke</h2>
       <div class="div-block-2">error 404 - page not found<br>‍</div>
-      <div>
+      <div class="section-15">
         <a href="index.html" class="button-2 color w-button">return to nametag</a>
       </div>
-      <div>
+      <div class="section-16">
         <a href="support.html" class="button-2 w-button">contact support</a>
       </div>
-    </div><img src="images/monster-2.svg" alt="">
+    </div><img src="images/monster-2.svg" alt="" class="image-33">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
