--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             info</label>
           <div class="columns-9 w-row">
             <div class="w-col w-col-6"><label for="Name-2" class="field-label-6">name</label><input type="text"
-                class="text-field-4 alt w-input" maxlength="256" name="field-2" data-name="Field 2"
+                class="text-field-4 alt w-input" maxlength="256" name="admin_name" data-name="Field 2"
                 placeholder="enter admin&#x27;s name (optional)" id="field-2"></div>
             <div class="w-col w-col-6"><label class="field-label-7">email</label><input type="text"
-                class="text-field-5 alt w-input" maxlength="256" name="field-2" data-name="Field 2"
+                class="text-field-5 alt w-input" maxlength="256" name="admin_email" data-name="Field 2"
                 placeholder="enter admin&#x27;s email (optional)" id="field-2"></div>
           </div><label class="field-label-8 bold"></label><label class="field-label-11">content of message</label>
           <div class="text-block-36">we&#x27;ll reach out to the Slack admin with a personalized version of the message
