Attempt to a) fix spacing in copy + share, b) fix index form submission

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div><label class="field-label-11">your info</label>
           <div class="columns-8 w-row">
             <div class="w-col w-col-6"><label for="Name" class="field-label-6">name</label><input type="text"
-                class="text-field-4 w-input" maxlength="256" name="Name" data-name="Name" placeholder="enter your name"
+                class="text-field-4 w-input" maxlength="256" name="name" data-name="Name" placeholder="enter your name"
                 id="Name" required=""></div>
             <div class="w-col w-col-6"><label for="email" class="field-label-7">email</label><input type="email"
                 class="text-field-5 w-input" maxlength="256" name="email" data-name="Email"
@@ -127,10 +127,7 @@
           </div><label class="field-label-8 bold"></label><label class="field-label-11">content of message</label>
           <div class="text-block-36">we&#x27;ll reach out to the Slack admin with a personalized version of the message
             below, or you can copy it to share on your own.</div>
-          <div id="copy-message" class="text-block-35">nametag is a Slack app that sets up quality 1:1 pairings for team
-            bonding. I think it could help our team get to know each other better and create space for informal
-            communication. <br><br>While other apps match people randomly, nametag creates better connections through
-            warm intros. More info at www.nametag.work. What do you think?</div>
+          <div id="copy-message" class="text-block-35">nametag is a Slack app that sets up quality 1:1 pairings for team bonding. I think it could help our team get to know each other better and create space for informal communication. <br><br>While other apps match people randomly, nametag creates better connections through warm intros. More info at www.nametag.work. What do you think?</div>
           <a data-clipboard-target="#copy-message" href="#" class="copy-btn w-button"> copy</a><input type="submit"
             value="submit" data-wait="Please wait..." class="button-2 w-button">
         </form>
