--- a/payment-confirmation.html
+++ b/payment-confirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 28 2021 05:39:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Apr 28 2021 07:00:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6088c1eb47ad4c8ede204924" data-wf-site="607751bb82c34317b0e0dee3">
 
 <head>
@@ -44,30 +44,21 @@
   </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-192864550-1', {
+      'anonymize_ip': false
+    });
   </script>
-  <!-- End Google Tag Manager -->
 </head>
 
 <body class="body-3">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
   <div>
     <div data-collapse="medium" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
       <div class="container-2 w-container">
@@ -91,8 +82,8 @@
     <div class="w-layout-grid grid-15">
       <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-de204924" class="text-block-32">thanks for subscribing<br>
         to nametag!</div><img src="images/tag-2.svg" loading="lazy"
-        id="w-node-_30c43c40-9ab0-a316-49ab-a9bd025477c2-de204924" alt="" class="image-44"><img src="images/tag-1-1.svg"
-        loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-de204924" alt="" class="image-29">
+        id="w-node-_30c43c40-9ab0-a316-49ab-a9bd025477c2-de204924" alt="" class="image-48"><img src="images/tag-1-1.svg"
+        loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-de204924" alt="" class="image-47">
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=607751bb82c34317b0e0dee3"
