--- a/set-up-instructions.html
+++ b/set-up-instructions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 28 2021 05:39:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Apr 28 2021 07:00:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6088d21c759e95df0b83769f" data-wf-site="607751bb82c34317b0e0dee3">
 
 <head>
@@ -44,30 +44,21 @@
   </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-192864550-1', {
+      'anonymize_ip': false
+    });
   </script>
-  <!-- End Google Tag Manager -->
 </head>
 
 <body class="body-3">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
   <div>
     <div data-collapse="medium" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
       <div class="container-2 w-container">
@@ -89,10 +80,10 @@
   </div>
   <div class="section-19">
     <div class="w-layout-grid grid-16">
-      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-0b83769f" class="text-block-32">thanks for adding nametag!
+      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-0b83769f" class="text-block-32 a">thanks for adding nametag!
       </div>
-      <div id="w-node-_8125d98d-4d87-57e4-fc27-7aba2b30aaf1-0b83769f" class="text-block-41">here&#x27;s a guide for how
-        to set up the app</div>
+      <div id="w-node-_8125d98d-4d87-57e4-fc27-7aba2b30aaf1-0b83769f" class="text-block-41 a">here&#x27;s a guide for
+        how to set up the app</div>
     </div>
   </div>
   <div class="w-layout-grid grid-17">
@@ -108,15 +99,15 @@
       src="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png" loading="lazy"
       id="w-node-_25c8288c-341e-87b6-7f81-dece8940189a-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1742w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-1600.png 1600w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1742w"
       alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png" loading="lazy"
       id="w-node-c90821e0-373f-c4ea-fb26-7d7419dabb4a-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1626w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-1600.png 1600w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1626w"
       alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png" loading="lazy"
       id="w-node-_06dbf6ec-2702-e42a-66c0-4b599f571c93-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1368w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1368w"
       alt="" class="image-46">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=607751bb82c34317b0e0dee3"
