--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
         <a href="index.html" class="button-2 color w-button">return to nametag</a>
       </div>
       <div class="section-16">
-        <a href="support.html" class="button-2 w-button">contact support</a>
+        <a href="support.html" class="button-2 a w-button">contact support</a>
       </div>
     </div><img src="images/monster-2.svg" alt="" class="image-33">
   </div>
