--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@
   <div>
     <div id="features_section" class="w-layout-grid grid-3 section-2">
       <div id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e989-c6e0dee4" class="text-block-28">every Friday, receive a
-        weekly update of new people you direct messaged.<br><br>link about me<strong> </strong>profiles/company
-        directory pages and schedule 1:1s with 1-click.</div>
+        weekly update of new people you direct messaged.<br><br>link about me<strong> </strong>profiles and schedule 1:1s with 1-click.</div>
       <div id="w-node-_74851627-e3c0-cd8f-295b-f78fa8c21bc0-c6e0dee4" class="text-block-29">customize hours you prefer
         to meet. <br><br>we&#x27;ll automatically adjust to your current time zone, even if you&#x27;re working from
-        somewhere new</div><img src="images/screen-1.svg" loading="lazy"
+        somewhere new.</div><img src="images/screen-1.svg" loading="lazy"
         id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98b-c6e0dee4" alt="" class="image-26"><img
         src="images/screen-2.svg" loading="lazy" id="w-node-_8047ed2d-947f-9967-97cf-baed3e23e98c-c6e0dee4" alt=""
         class="image-27">
