--- a/set-up-instructions.html
+++ b/set-up-instructions.html
@@ -89,9 +89,9 @@
   </div>
   <div class="section-19">
     <div class="w-layout-grid grid-16">
-      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-0b83769f" class="text-block-32">thanks for adding nametag!
+      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-0b83769f" class="text-block-32 a">thanks for adding nametag!
       </div>
-      <div id="w-node-_8125d98d-4d87-57e4-fc27-7aba2b30aaf1-0b83769f" class="text-block-41">here&#x27;s a guide for how
+      <div id="w-node-_8125d98d-4d87-57e4-fc27-7aba2b30aaf1-0b83769f" class="text-block-41 a">here&#x27;s a guide for how
         to set up the app</div>
     </div>
   </div>
@@ -108,15 +108,15 @@
       src="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png" loading="lazy"
       id="w-node-_25c8288c-341e-87b6-7f81-dece8940189a-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1742w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.43.33-AM-p-1600.png 1600w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1742w"
       alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png" loading="lazy"
       id="w-node-c90821e0-373f-c4ea-fb26-7d7419dabb4a-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1626w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.47.20-AM-p-1600.png 1600w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1626w"
       alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png" loading="lazy"
       id="w-node-_06dbf6ec-2702-e42a-66c0-4b599f571c93-0b83769f"
       sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
-      srcset="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1368w"
+      srcset="images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-500.png 500w, images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-800.png 800w, images/Screen-Shot-2021-04-28-at-12.44.33-AM-p-1080.png 1080w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1368w"
       alt="" class="image-46">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=607751bb82c34317b0e0dee3"
