--- a/support.html
+++ b/support.html
@@ -110,7 +110,7 @@
       loading="lazy" alt="" class="image-23"></div>
   <div><img src="images/Rectangle-123_1Rectangle-123.png" loading="lazy" alt="" class="image-25"></div>
   <div>
-    <div class="w-layout-grid grid-6 footer color">
+    <div class="w-layout-grid grid-6 footer color custom-footer-styles">
       <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec7-dae0deea"
         href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
         target="_blank" class="button-6 blog w-button">blog</a>
