--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month."
       class="image-43">
     <div id="w-node-_1c8fca0a-011a-2c7b-77ec-bd40b0db37df-c6e0dee4" class="text-block-31 bottom">30 day free trial<br>‍
-    </div><img src="images/pricing_big.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-c6e0dee4"
+    </div><img src="images/pricing_big_2.svg" loading="lazy" id="w-node-ccc09258-6002-cea7-5dd3-80f2fc34ded7-c6e0dee4"
       alt="The team plan starts at $30/month and includes up to 15 active users, weekly summary of new people messaged, integration with Google Calendar and Google Meet, and about me templates. Additional users cost $1/month."
       class="image-21">
     <a id="w-node-c89c2348-159a-d221-124c-7f6f424fe6be-c6e0dee4" href="http://api.nametag.work/slack/install"
